# blunderbuss

./: CMakeLists.txt  Cargo.toml  main.cpp
cmake/: googletest-download.cmake
lib/: CMakeLists.txt  bitboards.cpp  bitboards.h  engine.cpp  engine.h  file.h  greeting.cpp  greeting.h  move_generation.cpp  move_generation.h  rank.h  square.cpp  square.h
test/: CMakeLists.txt  bitboards_test.cpp  file_test.cpp  greeting_test.cpp  main.cpp  move_generation_test.cpp  rank_test.cpp  square_test.cpp
